collapse fix

--- a/CSS_WebStyle/CollapseElement.css
+++ b/CSS_WebStyle/CollapseElement.css
@@ -7,7 +7,7 @@
     color: #000000;
     cursor: pointer;
 
-    height: 30px;
+    height: 70px;
     font-size: 15px;
     padding: 18px;
 
@@ -17,6 +17,10 @@
 
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+
+    width: 100%;
+    margin-right: 0px;
+    margin-left: 0px;
 }
 
 .Collapsible h1{
@@ -27,6 +31,7 @@
     padding-top: 6px;
 
     user-select: none;
+    pointer-events: none;
 }
 
 
@@ -35,14 +40,24 @@
 }
 
 .CollapsibleContent {
-    display: none;
     background-color: rgba(255, 255, 255, 0);
     padding: 0 18px;
-    overflow: hidden;
 
 
     border: 3px #ffffff Solid;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+
+    width: auto;
+    margin-right: 0px;
+    margin-left: 0px;
+    margin-bottom: 15px;
+
+
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 1s ease-out;
 }
+
+
 
