--- a/CSS_WebStyle/WebStyle.css
+++ b/CSS_WebStyle/WebStyle.css
@@ -39,6 +39,7 @@ p {
 }
 
 li {
+    color: white;
     font-size: 15px;
     font-family: Roboto-Regular;
     font-weight: bold;
@@ -146,20 +147,20 @@ body {
     margin: 20px 10px;
     width: auto;
 
-    min-height: 50px;
+    height: 50px;
 
     display: flex;
     flex-direction: row;
+
+    background-color: #cccccc;
+
 }
 
 
 .LinkBox_Icon{
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-
+    border-radius: 10px ;
     background-color: grey;
-
-    width: 5vw;
+    width: 50px;
 
 }
 
@@ -170,7 +171,6 @@ body {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: #cccccc;
-    flex: 0.7 auto;
 
     background-size: contain;
     background-repeat: no-repeat;
@@ -181,7 +181,7 @@ body {
     font-weight: bolder;
     text-align: center;
     font-size: 12px;
-    padding-top: 8px
+    padding-top: 15px;
 
 }
 
